--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/v1.loader.js";
+      var loaderUrl = buildUrl + "/v2.loader.js";
       var config = {
-        dataUrl: buildUrl + "/v1.data.br",
-        frameworkUrl: buildUrl + "/v1.framework.js.br",
-        codeUrl: buildUrl + "/v1.wasm.br",
+        dataUrl: buildUrl + "/v2.data.gz",
+        frameworkUrl: buildUrl + "/v2.framework.js.gz",
+        codeUrl: buildUrl + "/v2.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "JG - Gravity Trails",
